Item2299: Item2344:    * spacing and font improvements    * added example TWikiWebCcss    * removed focusing the search box on every view    * if there's an WEBLOGOIMAGE then use it in the title bar instead of the WIKITOOLNAME    * fixed bug in save actions that could have caused data loss ; \    * added missing save parameters in editform.nat.tmpl |
git-svn-id: http://develop.twiki.org/svn/twiki/branches/TWikiRelease04x00@10311 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/NatSkin/pub/TWiki/NatSkin/CleanButtons.css
+++ b/twikiplugins/NatSkin/pub/TWiki/NatSkin/CleanButtons.css
@@ -11,7 +11,6 @@
   margin-left:20px;
   margin-right:10px;
   padding:5px 0px 10px 2px;
-  font-size:x-small;
   font-family:arial,sans-serif;
 }
 
