--- a/twikiplugins/NatSkin/pub/TWiki/NatSkin/GeorgiaBlueStyle.css
+++ b/twikiplugins/NatSkin/pub/TWiki/NatSkin/GeorgiaBlueStyle.css
@@ -231,7 +231,7 @@ hr {
 .natSideBar ol,
 .natSideBar ul {
   font:normal x-small/150% verdana,arial,sans-serif;
-  padding-left:20px;
+  padding-left:30px;
 }
 .natSideBar ul {
   font-weight:bold;
