--- a/twikiplugins/NatSkin/pub/TWiki/NatSkin/RustyStyle.css
+++ b/twikiplugins/NatSkin/pub/TWiki/NatSkin/RustyStyle.css
@@ -278,7 +278,7 @@ hr {
 
 .natSideBar ol {
   margin-left:15px;
-  padding-left:10px;
+  padding-left:20px;
 }
 
 .natSideBar ul {
